@@ -1,9 +1,11 @@
-CHANGES.txt - 2008-09-24
+CHANGES.txt - 2008-09-26
 ------------------------
 
 CHANGES IN CUPS V1.4b1
 
 	- Documentation updates (STR #2567)
+	- The CUPS-Add-Modify-Printer operation now allows you to set
+	  the printer-state-reasons attribute.
 	- The "set printer options" page now supports auto-configuration
 	  of printer options (STR #1440)
 	- The web interface now provides an advanced server settings
